--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Node build artifacts
+node_modules
+npm-debug.log
+
+# Local development
+*.env
+*.dev
+.DS_Store
+
+# Docker
+Dockerfile
+docker-compose.yml
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
